--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           node-version: '20'
       - run: npm ci || npm i
-      - run: node send-plan.js
+      - run: node send.js
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
